--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -150,6 +150,9 @@
 \newcommandx{\rainbowForests}[2][1 = n, 2 = \ell]{\b{\Psi}_{#1}^{#2}} % rainbow forests
 \newcommandx{\rainbowTrees}[2][1 = n, 2 = \ell]{\b{\rm{T}}_{#1}^{#2}} % rainbow trees
 \newcommandx{\Perm}[1][1 = n]{\mathsf{Perm}(#1)} % permutahedron
+\newcommandx{\Asso}[1][1 = n]{\mathsf{Asso}(#1)} % associahedron
+\newcommandx{\Cube}[1][1 = n]{\mathsf{Cube}(#1)} % cube
+\newcommandx{\Simplex}[1][1 = n]{\mathsf{Simplex}(#1)} % simplex
 \makeatletter
 \def\rightharpoonupfill@{\arrowfill@\relbar\relbar\rightharpoonup}
 \newcommand{\overrightharpoonup}{%
@@ -1828,7 +1831,7 @@ Our choices just limit the amount of oriented cycles in~$D_{\order{\pi}}$.
 In this second part, we study of the combinatorics of the diagonals of the permutahedra.
 In \cref{sec:cellularDiagonals}, we first recall the definition and some know facts about diagonals of polytopes (\cref{subsec:cellularDiagonalsPolytopes}), which we immediately specialize to the classical permutahedron (\cref{sec:cellularDiagonalsPermutahedra}), and connect to \cref{part:multiBraidArrangements} to derive enumerative statements on the diagonals of permutahedra (\cref{subsec:enumerationDiagonalPermutahedra}).
 In \cref{sec:operadicDiagonals}, we consider two particular diagonals, the $\LA$ and $\SU$ diagonals (\cref{subsec:LASUdiagonal}), show that these are the only two operadic diagonals which induce the weak order (\cref{subsec:operadicProperty}), and that they are isomorphic (\cref{subsec:isos-LA-SU}). 
-Using results from \cref{sec:cellularDiagonals}, we then characterize their facets in terms of paths in $(2,n)$-partition trees (\cref{subsec:facets-operadic-diags}), and their vertices as pattern-avoiding pairs of permutations (\cref{subsec:vertices-operadic-diags}).
+Using results from \cref{sec:facePoset,sec:cellularDiagonals}, we then characterize their facets in terms of paths in $(2,n)$-partition trees (\cref{subsec:facets-operadic-diags}), and their vertices as pattern-avoiding pairs of permutations (\cref{subsec:vertices-operadic-diags}).
 Finally, in \cref{sec:shifts}, we show that the geometric $\SU$ diagonal $\SUD$ is a topological enhancement of the original Saneblidze-Umble diagonal~\cite{SaneblidzeUmble} (\cref{subsec:topological-SU}).
 In order to prove this result, we define different types of shifts that can be performed on the facets of the $\SU$ diagonal, and give several new equivalent definitions of it. 
 These descriptions are directly translated to the $\LA$ diagonal via isomorphism (\cref{subsec:shifts-under-iso}).
@@ -1845,13 +1848,13 @@ Finally, we present the alternative matrix (\cref{subsec:matrix}) and cubical (\
 \subsection{Cellular diagonals for polytopes}
 \label{subsec:cellularDiagonalsPolytopes}
  
-Cellular approximations of the thin diagonal for families of polytopes are of fundamental importance in algebraic topology and geometry.
+As discussed in the introduction, cellular approximations of the thin diagonal for families of polytopes are of fundamental importance in algebraic topology and geometry.
 They allow one to define the cup product and thus define the ring structure on the cohomology groups of a topological space, and combinatorially on the Chow groups of a toric variety. 
 We now proceed to define thin, cellular, and geometric diagonals.
 
 \begin{definition} 
 \label{def:thinDiagonal}
-The \defn{thin diagonal} of a set $X$ is the map~$\delta : X \to X \times X$ defined by $\delta(x) \eqdef (x,x)$ for all $x \in X$.s
+The \defn{thin diagonal} of a set $X$ is the map~$\delta : X \to X \times X$ defined by $\delta(x) \eqdef (x,x)$ for all $x \in X$.
 See \cref{fig:examplesDiagonals1}\,(left).
 \end{definition}
 
@@ -1864,14 +1867,14 @@ A \defn{cellular diagonal} of a $d$-dimensional polytope $P$ is a continuous map
 \item it is homotopic to the thin diagonal of~$P$, relative to the image of the vertices of~$P$. 
 \end{enumerate}
 See \cref{fig:examplesDiagonals1}\,(middle left).
-A cellular diagonal is said to be \defn{face-coherent} if its restriction to a face of $P$ is itself a cellular diagonal for that face. 
+A cellular diagonal is said to be \defn{face coherent} if its restriction to a face of $P$ is itself a cellular diagonal for that face. 
 \end{definition}
 
-A powerful geometric technique to define face-coherent cellular diagonals on polytopes first appeared in~\cite{FultonSturmfels}, was presented in~\cite{MasudaThomasTonksVallette}, and was fully developed in~\cite{LaplanteAnfossi}.
+A powerful geometric technique to define face coherent cellular diagonals on polytopes first appeared in~\cite{FultonSturmfels}, was presented in~\cite{MasudaThomasTonksVallette}, and was fully developed in~\cite{LaplanteAnfossi}.
 We provide in \cref{thm:diagonal} the precise (but slightly technical) definition of these diagonals, even though we will only use the characterization of the faces in their image provided in \cref{thm:universalFormula}.
 
 The key idea is that any vector $\b{v}$ in generic position with respect to $P$ defines a cellular diagonal of $P$.
-For $\b{z}$ a point of $P$, let us denote by $\rho_{\b{z}} P \eqdef 2\b{z}-P$ denotes the reflection of $P$ with respect to the point~$\b{z}$.
+For $\b{z}$ a point of $P$, we denote by $\rho_{\b{z}} P \eqdef 2\b{z}-P$ the reflection of $P$ with respect to the point~$\b{z}$.
 
 \begin{definition}
 	The \defn{fundamental hyperplane arrangement}~$\mathcal{H}_P$ of a polytope~$P \subset \R^d$ is the set of all linear hyperplanes of~$\R^d$ orthogonal to the edges of $P\cap \rho_{\b{z}} P$ for all $\b{z} \in P$. 
@@ -1880,11 +1883,11 @@ For $\b{z}$ a point of $P$, let us denote by $\rho_{\b{z}} P \eqdef 2\b{z}-P$ de
 
 \begin{figure}[p]
 	\centerline{
-		\includegraphics[scale=.4]{HypSimplex.png} \hspace{-.6cm}
-		\includegraphics[scale=.45]{HypCube.png} \hspace{-.3cm}
-		\includegraphics[scale=.4]{HypPermuto.png}
+		\includegraphics[scale=.38]{HypSimplex.png} \hspace{-.6cm}
+		\includegraphics[scale=.44]{HypCube.png} \hspace{-.3cm}
+		\includegraphics[scale=.38]{HypPermuto.png}
 	}
-	\caption{The fundamental hyperplane arrangements of the $3$-dimensional simplex, cube, and permutahedron. In blue are pictured the hyperplanes which are not perpendicular to actual edges of the polytope $P$, but only to edges of some intersection $P\cap \rho_z P$. Left and rightmost illustrations from~\cite[Fig.~12]{LaplanteAnfossi}.}
+	\caption{The fundamental hyperplane arrangements of the $3$-dimensional simplex (left), cube (middle), and permutahedron (right). The hyperplanes which are perpendicular to edges of the polytope~$P$ are colored in yellow, while those which are not perpendicular to  edges of the polytope $P$, but only to edges of some intersection $P\cap \rho_z P$ are colored in blue. Left and rightmost illustrations from~\cite[Fig.~12]{LaplanteAnfossi}.}
 	\label{fig:examplesHyperplanes}
 \end{figure}
 
@@ -1895,7 +1898,7 @@ In particular, such a vector is not perpendicular to any edge of $P$, and we den
 
 \begin{theorem}
 \label{thm:diagonal}
-For any vector $\b{v} \in \R^d$ in generic position with respect to $P$, the tight coherent section~$\triangle_{(P,\b{v})}$ of the projection $P \times P \to P, (\b{x}, \b{y}) \mapsto (\b{x}+\b{y})/2$ selected by the vector~$(-\b{v}, \b{v})$ defines a cellular diagonal of~$P$.
+For any vector $\b{v} \in \R^d$ generic with respect to $P$, the tight coherent section~$\triangle_{(P,\b{v})}$ of the projection $P \times P \to P, (\b{x}, \b{y}) \mapsto (\b{x}+\b{y})/2$ selected by the vector~$(-\b{v}, \b{v})$ defines a cellular diagonal of~$P$.
 More precisely, $\triangle_{(P,\b{v})}$ is given by the explicit formula
 \begin{align*}
 	\begin{array}{rlcl}
@@ -1907,10 +1910,10 @@ More precisely, $\triangle_{(P,\b{v})}$ is given by the explicit formula
 
 \begin{definition}
 \label{def:geometricDiagonal}
-A \defn{geometric diagonal} of a polytope~$P$ is a diagonal of the form~$\triangle_{(P,\b{v})}$ for some vector~$\b{v} \in \R^d$ in generic position with respect to~$P$.
+A \defn{geometric diagonal} of a polytope~$P$ is a diagonal of the form~$\triangle_{(P,\b{v})}$ for some vector~$\b{v} \in \R^d$ generic with respect to~$P$.
 \end{definition}
 
-A geometric diagonal~$\triangle_{(P,\b{v})}$ only depends on the region of~$\mathcal{H}_P$ containing~$\b{v}$, see~\cite[Prop.~1.23]{LaplanteAnfossi}.
+Note that the geometric diagonal~$\triangle_{(P,\b{v})}$ only depends on the region of~$\mathcal{H}_P$ containing~$\b{v}$, see~\cite[Prop.~1.23]{LaplanteAnfossi}.
 
 \begin{figure}[p]
 	\centerline{\scalebox{1.25}{
@@ -1961,7 +1964,7 @@ Recall that the \defn{normal cone} of a face~$F$ of a polytope~$P$ in~$\R^d$ is 
 
 \begin{theorem}[{\cite[Thm.~1.26]{LaplanteAnfossi}}]
 \label{thm:universalFormula}
-Fix a vector $\b{v} \in \R^d$ in generic position with respect to $P$.
+Fix a vector $\b{v} \in \R^d$ generic with respect to $P$.
 For each hyperplane~$H$ of the fundamental hyperplane arrangement~$\mathcal{H}_P$, denote by~$H^{\b{v}}$ the open half space defined by~$H$ and containing~$\b{v}$.
 The faces of~$P \times P$ in the image of the geometric diagonal~$\triangle_{(P,\b{v})}$ are the faces~$F \times G$ where~$F$ and~$G$ are faces of~$P$ such that either the normal cone of~$F$ intersects~$H^{-\b{v}}$ or the normal cone of~$G$ intersects~$H^{\b{v}}$, for each~$H \in \mathcal{H}_P$.
 \end{theorem}
@@ -1977,7 +1980,7 @@ We thus obtain the following statement.
 
 \begin{proposition}[{\cite[Coro.~1.4]{LaplanteAnfossi}}]
 \label{prop:diagonalCommonRefinement}
-The inclusion poset on the faces in the image of the diagonal~$\triangle_{(P,\b{v})}$ is isomorphic to the reverse inclusion poset of the faces of the common refinement of two copies of the normal fan of~$P$, translated from each other by the vector~$\b{v}$. 
+The inclusion poset on the faces in the image of the diagonal~$\triangle_{(P,\b{v})}$ is isomorphic to the reverse inclusion poset on the faces of the common refinement of two copies of the normal fan of~$P$, translated from each other by the vector~$\b{v}$. 
 \end{proposition}
 
 Finally, the following statement relates the image of the diagonal~$\triangle_{(P, \b{v})}$ to the intervals of the poset obtained by orienting the skeleton of~$P$ in direction~$\b{v}$.
@@ -1993,9 +1996,25 @@ For any polytope $P$ and any generic vector $\b{v}$,
 
 \begin{remark}
 \label{rem:magicalFormula}
-For some polytopes such as the simplices~\cite{EilenbergMacLane}, the cubes~\cite{Serre}, the freehedra~\cite{Saneblidze-freeLoopFibration}, and the associahedra~\cite{MasudaThomasTonksVallette}, the reverse inclusion also holds (in the case of the simplices and the cubes, the diagonals are know as \emph{Alexander--Whitney} and \emph{Serre} maps).
+For some polytopes such as the simplices~\cite{EilenbergMacLane}, the cubes~\cite{Serre}, the freehedra~\cite{Saneblidze-freeLoopFibration}, and the associahedra~\cite{MasudaThomasTonksVallette}, the reverse inclusion also holds (in the case of the simplices and the cubes, the diagonals are know as \emph{Alexander--Whitney} map~\cite{EilenbergMacLane} and \emph{Serre} map~\cite{Serre}).
 According to~\cite{MasudaThomasTonksVallette}, the resulting equality enhancing~(\ref{eq:magique}) was called \defn{magical formula} by J.-L. Loday.
-Polytopes of greater complexity such as the multiplihedra~\cite{LaplanteAnfossiMazuir} or the operahedra~\cite{LaplanteAnfossi}, which include the permutahedra, do not possess this exceptional property. 
+This equality simplifies the computation of the $f$-vectors of the diagonals.
+For instance, the number of $k$-dimsensional faces in the diagonal of the $(n-1)$-dimensional simplex, cube, and associahedron are respectively given by
+\begin{alignat*}{2}
+f_k(\triangle_{\Simplex}) & = (k+1) \binom{n+1}{k+2} && \text{\OEIS{A127717}},
+% choose k+2 points of [n] where 2 consecutive are distinguished and might be equal, and the rest is distinct
+% this is the same as choosing k+2 points of [n+1], and the position of the consecutive pair of distinguished points among them
+% hence (k+1) \binom{n+1}{k+2}
+\\
+f_k(\triangle_{\Cube}) & = \binom{n-1}{k} 2^k 3^{n-1-k} && \text{\OEIS{A038220},}
+% choose a < b <= c < d in the boolean lattice such that |b-a| + |d-c| = k.
+% choose the positions of the ones in (b-a) + (d-c) => \binom{n}{k}
+% choose whether each of this ones is in (b-a) or in (d-c) => 2^k
+% choose the values of b and c on the remaining n-k positions to be either 00, 01 or 11 => 3^(n-k)
+\\
+f_k(\triangle_{\Asso}) & = \frac{2}{(3n+1)(3n+2)} \binom{n-1}{k} \binom{4n+1-k}{n+1} \qquad && \text{\cite{BostanChyzakPilaud}.}
+\end{alignat*}
+Polytopes of greater complexity such as the multiplihedra~\cite{LaplanteAnfossiMazuir} or the operahedra~\cite{LaplanteAnfossi}, which include the permutahedra, do not possess this exceptional property, and the $f$-vectors of their diagonals are harder to compute.
 \end{remark}
 
 \begin{remark}
@@ -2005,8 +2024,11 @@ This is in fact precisely the content of the \emph{Fulton--Sturmfels formula} fo
 To conclude, we define the opposite of a geometric diagonal.
 
 \begin{definition}
-The \defn{opposite} of a geometric diagonal~$\triangle \eqdef \triangle_{(P, \b{v})}$ is the geometric diagonal~$\triangle^{\op} \eqdef \triangle_{(P, -\b{v})}$.
-Note that~$F \times G \in \Ima \triangle$ if and only if~$G \times F \in \Ima \triangle^{\op}$.
+The \defn{opposite} of the geometric diagonal~$\triangle \eqdef \triangle_{(P, \b{v})}$ for a vector~$\b{v} \in \R^d$ generic with respect to $P$ is the geometric diagonal~$\triangle^{\op} \eqdef \triangle_{(P, -\b{v})}$ for the vector~$-\b{v}$.
+Observe that
+\[{
+F \times G \in \Ima \triangle} \qquad\iff\qquad G \times F \in \Ima \triangle^{\op}.
+\]
 \end{definition}
 
 %%%%%%%%%%%%%%%
@@ -2019,7 +2041,7 @@ We first recall its definition.
 
 \begin{definition}
 \label{def:permutahedron}
-The \defn{permutahedron}~$\Perm$ is the polytope defined equivalently as
+The \defn{permutahedron}~$\Perm$ is the polytope in~$\R^n$ defined equivalently as
 \begin{itemize}
 \item the convex hull of the points~$\sum_{i \in [n]} i \, \b{e}_{\sigma(i)}$ for all permutations~$\sigma$ of~$[n]$, see~\cite{Schoute},
 \item the intersection of the hyperplane~$\smash{\bigset{\b{x} \in \R^n}{\sum_{i \in I} x_i = \binom{n+1}{2}}}$ with the affine halfspaces $\smash{\bigset{\b{x} \in \R^n}{\sum_{i \in I} x_i \ge \binom{|I|+1}{2}}}$ for all~${\varnothing \ne I \subsetneq [n]}$, see~\cite{Rado}.
@@ -2063,7 +2085,7 @@ For this, the following definition will be convenient.
 
 \begin{definition}
 	\label{def:domination}
-For $I,J \subseteq [n]$ and an ordered partition $\sigma$ of~$[n]$ into $k$ blocks, we say that $I$~\defn{dominates} $J$ in~$\sigma$ if for all $\ell \in [k]$, the first~$\ell$ blocks of~$\sigma$ contain more elements of~$I$ than of~$J$, or the same number of elements.
+For $I,J \subseteq [n]$ and an ordered partition $\sigma$ of~$[n]$ into $k$ blocks, we say that $I$~\defn{dominates} $J$ in~$\sigma$ if for all $\ell \in [k]$, the first~$\ell$ blocks of~$\sigma$ contain at least as many elements of~$I$ than of~$J$.
 \end{definition}
 
 \begin{theorem}[{\cite[Thm.~3.16]{LaplanteAnfossi}}]
@@ -2071,22 +2093,23 @@ For $I,J \subseteq [n]$ and an ordered partition $\sigma$ of~$[n]$ into $k$ bloc
 A pair~$(\sigma, \tau)$ of ordered partitions of~$[n]$ corresponds to a face in the image of the geometric diagonal~$\triangle_{(\Perm, \b{v})}$ if and only if, for all~$(I,J) \in \Or(\b{v})$, $J$ does not dominate~$I$ in~$\sigma$ or $I$ does not dominate~$J$ in~$\tau$.
 \end{theorem}
 
-As the normal fan of the permutahedron~$\Perm$ is the fan defined by the braid arrangement~$\braidArrangement$, we obtain by \cref{prop:diagonalCommonRefinement} the following connection between the diagonal of~$\Perm$ and the $(2,n)$-braid arrangement~$\multiBraidArrangement[2][n]$ studied in \cref{part:multiBraidArrangements}, illustrated in \cref{fig:diagonalPermutahedron1}.
+As the normal fan of the permutahedron~$\Perm$ is the fan defined by the braid arrangement~$\braidArrangement$, we obtain by \cref{prop:diagonalCommonRefinement} the following connection between the diagonal of~$\Perm$ and the $(2,n)$-braid arrangement~$\multiBraidArrangement[2][n]$ studied in \cref{part:multiBraidArrangements}.
+This connection is illustrated in \cref{fig:diagonalPermutahedron1}.
 %
 \begin{figure}
-	\centerline{\includegraphics[scale=.9]{diagonalPermutahedron1}}
+	\centerline{\includegraphics[scale=.7]{diagonalPermutahedron1}}
 	\caption{The duality between the $(2,3)$-braid arrangement~$\multiBraidArrangement[3][2]$ (left) and the diagonal of the permutahedron~$\Perm[3]$ (right).}
 	\label{fig:diagonalPermutahedron1}
 \end{figure}
 
 \begin{proposition}
 \label{prop:diagonalPermutahedraMultiBraidArrangements}
-The inclusion poset on the faces in the image of the diagonal~$\triangle_{(\Perm, \b{v})}$ is isomorphic to the reverse inclusion poset of the faces of the $(2,n)$-braid arrangement~$\multiBraidArrangement[2][n]$. 
+The inclusion poset on the faces in the image of the diagonal~$\triangle_{(\Perm, \b{v})}$ is isomorphic to the reverse inclusion poset on the faces of the $(2,n)$-braid arrangement~$\multiBraidArrangement[2][n]$. 
 \end{proposition}
 
 \begin{remark}
 \label{rem:translationMatrix}
-Note that the translation matrix~$\b{a}$ from \cref{def:multiBraidArrangementPrecise} has two rows, with first row~$\b{a}_{1,j} = 0$ and second row~$\b{a}_{2,j} = v_j-v_{j+1}$ for all~$j \in [n-1]$.
+To be more precise, the diagonal~$\triangle_{(\Perm, \b{v})}$ corresponds to the $\b{a}$-braid arrangement~$\multiBraidArrangement[2][n](\b{a})$ where the translation matrix~$\b{a}$ from \cref{def:multiBraidArrangementPrecise} has two rows, with first row~$\b{a}_{1,j} = 0$ and second row~$\b{a}_{2,j} = v_j-v_{j+1}$ for all~$j \in [n-1]$.
 \end{remark}
 
 \begin{remark}
@@ -2098,11 +2121,10 @@ See also \cref{exm:intervalsWeakOrderNotDiagonals}.
 
 \begin{proposition}[{\cite[Sect.~3]{LaplanteAnfossi}}]
 For any~$n > 3$ and any generic vector~$\b{v}$, the diagonal~$\triangle_{(\Perm, \b{v})}$ of the permutahedron~$\Perm$ does \emph{not} satisfy the magical formula.
-Namely, the inclusion	  
+Namely, we have the strict inclusion	  
 \begin{equation*}
-\Ima\triangle_{(\Perm, \b{v})} \quad \subsetneq \bigcup_{\substack{F,G \text{ faces of } \Perm \\ \max_{\b{v}}(F) \, \le \, \min_{\b{v}}(G)}} F \times G  
+\Ima\triangle_{(\Perm, \b{v})} \quad \subsetneq \bigcup_{\substack{F,G \text{ faces of } \Perm \\ \max_{\b{v}}(F) \, \le \, \min_{\b{v}}(G)}} F \times G .
 \end{equation*}
-is strict.
 \end{proposition}
 
 \begin{remark}
@@ -2194,7 +2216,8 @@ Observe that one can easily compute the full M\"obius polynomials of the $(2,n)$
 We now focus on the number of vertices, regions, and bounded regions of the $(2,n)$-braid arrangement~$\multiBraidArrangement[n][2]$, to obtain the number of facets, vertices, and internal vertices of the diagonal of the permutahedron~$\Perm$.
 The first few values are gathered in \cref{table:enumerationDiagonalPermutahedra1,table:enumerationDiagonalPermutahedra2}.
 
-\begin{table}[b]
+\afterpage{
+\begin{table}
 	\centerline{\scalebox{1}{
 		\begin{tabular}[t]{c|ccccccccccc}
 			$n$ & $1$ & $2$ & $3$ & $4$ & $5$ & $6$ & $7$ & $8$ & $9$ & $\dots$ & OEIS \\
@@ -2204,16 +2227,18 @@ The first few values are gathered in \cref{table:enumerationDiagonalPermutahedra
 			int. verts. & $1$ & $1$ & $5$ & $43$ & $529$ & $8501$ & $169021$ & $4010455$ & $110676833$ & $\dots$ & \OEIS{A251568}
 		\end{tabular}
 	}}
-	\vspace{.3cm}
+%	\vspace{.3cm}
 	\caption{The numbers of facets, vertices, and internal vertices of the diagonal of the permutahedron~$\Perm$ for~$n \in [9]$.}
 	\label{table:enumerationDiagonalPermutahedra1}
 \end{table}
+}
 
+\afterpage{
 \begin{table}
 	\centerline{
 		\begin{tabular}{c@{\quad}c@{\quad}c@{\quad}c}
 			$n = 1$ & $n = 2$ & $n = 3$ & $n = 4$
-			\\[.1cm]
+			\\
 			\begin{tabular}[t]{r|c}
 				\textbf{dim} & \textbf{0}  \\
 				\hline
@@ -2249,7 +2274,7 @@ The first few values are gathered in \cref{table:enumerationDiagonalPermutahedra
 	\centerline{
 		\begin{tabular}{c@{\quad}c}
 			$n = 5$ & $n = 6$
-			\\[.1cm]
+			\\
 			\begin{tabular}[t]{r|ccccc}
 				\textbf{dim} & \textbf{0} & \textbf{1} & \textbf{2} & \textbf{3} & \textbf{4} \\
 				\hline
@@ -2275,6 +2300,7 @@ The first few values are gathered in \cref{table:enumerationDiagonalPermutahedra
 	\caption{Number of pairs of faces in the cellular image of the diagonal of the permutahedron~$\Perm$ for~$n \in [6]$.}
 	\label{table:enumerationDiagonalPermutahedra2}
 \end{table}
+}
 
 \begin{corollary}
 \label{coro:enumerationDiagonalPermutahedra}
@@ -2289,7 +2315,7 @@ where~$\displaystyle C_m \eqdef \frac{1}{m+1} \binom{2m}{m}$ denotes the $m$\ord
 \end{corollary}
 
 \begin{proof}
-Use the duality between the $(2,n)$-braid arrangement~$\multiBraidArrangement[n][2]$ and the diagonal of the permutahedron~$\Perm$ (see \cref{fig:diagonalPermutahedron1}), and specialize \cref{thm:verticesMultiBraidArrangement,thm:regionsMultiBraidArrangement} to~$\ell = 2$.
+Use the duality between the $(2,n)$-braid arrangement~$\multiBraidArrangement[n][2]$ and the diagonal of the permutahedron~$\Perm$ (see \cref{prop:diagonalPermutahedraMultiBraidArrangements,fig:diagonalPermutahedron1}), and specialize \cref{thm:verticesMultiBraidArrangement,thm:verticesRefinedMultiBraidArrangement,thm:regionsMultiBraidArrangement} to the case~$\ell = 2$.
 \end{proof}
 
 \begin{remark}
@@ -2300,11 +2326,13 @@ Consider the intersection tree~$T$ of~$\b{F}$ with vertices labeled by the parts
 See \cref{fig:tree}.
 The result is a spanning tree of the complete graph~$K_{n+1}$ on~$\{0, \dots, n\}$ which must contain the edge~$(0,1)$ (because we have chosen the root to be the part of~$F_1$ containing~$1$).
 %
+\afterpage{
 \begin{figure}
-	\centerline{\includegraphics[scale=1]{tree}}
+	\centerline{\includegraphics[scale=.9]{tree}}
 	\caption{The bijection from rooted $(\ell,n)$-partition trees (left) to spanning trees of~$K_{n+1}$ containing the edge~$(0,1)$ (right).}
 	\label{fig:tree}
 \end{figure}
+}
 %
 Finally, by double counting the pairs~$(T,e)$ where $T$ is a spanning tree of~$K_{n+1}$ and $e$ is an edge of~$T$, we see that $n$ times the number of spanning trees of~$K_{n+1}$ equals $\binom{n+1}{2}$ times the number of spanning trees of~$K_{n+1}$ containing~$(0,1)$.
 Hence, by Cayley's formula for spanning trees of~$K_{n+1}$, we obtain that the number of $(2,n)$-partition trees~is
@@ -2751,7 +2779,7 @@ The pairs of permutations $(\sigma,\tau)$ avoiding the patterns $(21,12)$ are pr
 
 \begin{theorem}
 \label{thm:patterns}
-A pair of permutations of $[n]$ is a vertex of the $\LA$ (\resp $\SU$) diagonal if and only if for any~$k\geq 1$ and for any $(I,J) \in \LA(k)$ (\resp $\SU(k)$) of size $|I|=|J|=k$ it avoids the patterns 
+A pair of permutations of $[n]$ is a vertex of the $\LA$ (\resp $\SU$) diagonal if and only if for any~$k\geq 1$ and for any $(I,J) \in \LA(k)$ (\resp $\SU(k)$) of size $|I|=|J|=k$ it avoids~the~patterns 
 \begin{align}
 	(j_1 i_1 j_2 i_2 \cdots j_k i_k,\ i_2 j_1 i_3 j_2 \cdots i_k j_{k-1} i_1 j_k), \tag{LA} \label{eq:pattern} \\
 	\text{ \resp } (j_1 i_1 j_2 i_2 \cdots j_k i_k, \ i_1 j_k i_2 j_1 \cdots i_{k-1} j_{k-2}i_k j_{k-1}), \tag{SU}
